--- a/Proyecto_NEO_Brasil/public/index.html
+++ b/Proyecto_NEO_Brasil/public/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1f1f1f" />
-    <meta name="title" content="MediQuo" />
-    <meta
-      name="description"
-      content="Tsul desenvolvimento de sistemas web e mobile"
-    />
-    <meta
-      name="keywords"
-      content="tsul, neo gateway, mediquo, telemedicina, consulta médica"
-    />
-    <meta name="author" content="TSUL" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- Open Graph / Facebook -->
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="MediQuo" />
-    <meta
-      property="og:description"
-      content="Tsul desenvolvimento de sistemas web e mobile"
-    />
-    <meta name="theme-color" content="#722ED1">
 
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#1f1f1f" />
+  <meta name="title" content="MediQuo" />
+  <meta name="description" content="Tsul desenvolvimento de sistemas web e mobile" />
+  <meta name="keywords" content="tsul, neo gateway, mediquo, telemedicina, consulta médica" />
+  <meta name="author" content="TSUL" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="MediQuo" />
+  <meta property="og:description" content="Tsul desenvolvimento de sistemas web e mobile" />
+  <meta name="theme-color" content="#549B7F">
+
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -35,17 +27,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MediQuo</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap&family=Public+Sans:wght@400;500;600;700"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Tal - Da saúde ao lazer.</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap&family=Public+Sans:wght@400;500;600;700"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -55,9 +47,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script
-      type="text/javascript"
-      src="https://widget.mediquo.com/js/1.0.0/mediquo.js"
-    ></script>
-  </body>
+  <script type="text/javascript" src="https://widget.mediquo.com/js/1.0.0/mediquo.js"></script>
+</body>
+
 </html>
